Don't add graphical applications if no desktop is provided.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -93,6 +93,7 @@
     state: "present"
     name: "{{ packages.desktop_useful }}"
   when:
+    - desktop != ""
     - install.desktop_useful | bool
 
 - name: "Include vars for desktop '{{ desktop }}'"
